# eternia

./: CMakeLists.txt
benchmark/: CMakeLists.txt  et_tensor.cc  iobench.cc  tensor.cc
include/eternia/: constants.h  libgpu.h  transaction.h  vector.h
include/eternia/transactions/: sequential.h
src/: CMakeLists.txt  libgpu.cc
tasks/: CMakeLists.txt  chimaera_repo.yaml
tasks/eternia_core/: CMakeLists.txt
tasks/eternia_core/include/eternia_core/: eternia_core_client.h  eternia_core_lib_exec.h  eternia_core_methods.compiled.yaml  eternia_core_methods.h  eternia_core_methods.yaml  eternia_core_tasks.h
tasks/eternia_core/src/: CMakeLists.txt  eternia_core_client.cc  eternia_core_monitor.py  eternia_core_runtime.cc
test/jarvis_eternia/jarvis_eternia/eternia_unit_tests/: pkg.py
test/jarvis_eternia/jarvis_eternia/jarvis_hermes/eternia_unit_tests/: pkg.py
test/jarvis_eternia/pipelines/: start_runtime.yaml  test_vector.yaml  test_vector_add.yaml
